kotlin-parser/src/test/semlang/validatorTests/fail/functionDeclaration1.sem

function myFunction(unknownType: UnknownType): Integer {
  Integer."1"
}
